fixed footer alignment

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -9,7 +9,7 @@
 }
 
 li {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .contact-header {
@@ -29,3 +29,4 @@ li {
 .contact-header {
     margin: 0 auto;
 }
+
